--- a/views/admin/courseInner.ejs
+++ b/views/admin/courseInner.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>student / CourseInner</title>
+  <title>Courses</title>
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -26,8 +26,6 @@
 <body>
   <%- include("./nav.ejs") %>
     <main>
-
-
       <section id="course-inner">
         <div class="overview">
           <img class="course-img" src="<%= course.coverPic %>" alt="" />
