--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
-    <!-- toastify -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <!-- style sheets -->
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
-    <link rel="stylesheet" href="/css/admin/users.css" />
-    <link rel="stylesheet" href="/css/chatGPT.css" />
-    <title>Admin-Users</title>
-  </head>
 
-  <body>
-    <%- include("./nav.ejs") %>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
+  <!-- toastify -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- style sheets -->
+  <link rel="stylesheet" href="/css/general.css" />
+  <link rel="stylesheet" href="/css/admin/nav.css" />
+  <link rel="stylesheet" href="/css/admin/users.css" />
+  <link rel="stylesheet" href="/css/chatGPT.css" />
+  <title>Admin-Users</title>
+</head>
+
+<body>
+  <%- include("./nav.ejs") %>
     <main>
       <header>
         <h1>Users</h1>
@@ -63,22 +57,11 @@
                 <label for="student">Student</label>
               </div>
               <div>
-                <input
-                  checked
-                  type="radio"
-                  id="instructor"
-                  name="role"
-                  value="Instructor"
-                />
+                <input checked type="radio" id="instructor" name="role" value="Instructor" />
                 <label for="instructor">Instructor</label><br />
               </div>
               <div>
-                <input
-                  type="radio"
-                  id="teachingAssistant"
-                  name="role"
-                  value="Teaching Assistant"
-                />
+                <input type="radio" id="teachingAssistant" name="role" value="Teaching Assistant" />
                 <label for="teachingAssistant">Teaching Assistant</label>
               </div>
             </div>
@@ -113,73 +96,81 @@
               <th>Status</th>
               <th></th>
             </tr>
-            <% users.forEach(item => {
+            <% users.forEach(item=> {
               if (item.role !== 'admin') { %>
-            <tr class="user">
-              <td>
-                <input type="checkbox" class="checkbox" />
-                <div class="right-and-wrong" style="display: none">
-                  <i class="fa-solid fa-check" style="color: green; cursor: pointer"></i>
-                  <i class="fa-solid fa-xmark" style="color: red; cursor: pointer"></i>
-                </div>
-              </td>
-              <td>
-                <div class="container">
-                  <img src="<%= item.profilePic %>" alt="profile picture" />
-                </div>
-              </td>
-              <td><%= item.firstName %> <%= item.lastName %></td>
-              <td><%= item.role %></td>
-              <td><%= item.email %></td>
-              <td class="<%= item.isBanned ? 'banned' : 'active' %>">
-                <span><%- item.isBanned ? 'Banned' : 'Active' %></span>
-              </td>
-              <td style="position: relative">
-                <button class="dots btn">
-                  <i class="fa-solid fa-ellipsis-vertical"></i>
-                </button>
-                <div class="options">
-                  <ul data-userid="<%= item._id %>">
-                    <li>
-                      <button><i class="fa-solid fa-message"></i> Message</button>
-                    </li>
-                    <li>
-                      <button class="editbtn">
-                        <i class="fa-solid fa-pencil edit"></i> Edit
-                      </button>
-                    </li>
-                    <li>
-                      <button class="removebtn">
-                        <i class="fa-solid fa-trash delete"></i>
-                        Remove
-                      </button>
-                    </li>
-                    <li>
-                      <button class="banbtn">
-                        <i class="fa-solid fa-ban ban"></i>
-                        <span><%- item.isBanned ? 'Unban' : 'Ban' %></span>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-              </td>
-            </tr>
-            <% }
-            }); %>
-          </table>        
+              <tr class="user">
+                <td>
+                  <input type="checkbox" class="checkbox" />
+                  <div class="right-and-wrong" style="display: none">
+                    <i class="fa-solid fa-check" style="color: green; cursor: pointer"></i>
+                    <i class="fa-solid fa-xmark" style="color: red; cursor: pointer"></i>
+                  </div>
+                </td>
+                <td>
+                  <div class="container">
+                    <img src="<%= item.profilePic %>" alt="profile picture" />
+                  </div>
+                </td>
+                <td>
+                  <%= item.firstName %>
+                    <%= item.lastName %>
+                </td>
+                <td>
+                  <%= item.role %>
+                </td>
+                <td>
+                  <%= item.email %>
+                </td>
+                <td class="<%= item.isBanned ? 'banned' : 'active' %>">
+                  <span><%- item.isBanned ? 'Banned' : 'Active' %></span>
+                </td>
+                <td style="position: relative">
+                  <button class="dots btn">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </button>
+                  <div class="options">
+                    <ul data-userid="<%= item._id %>">
+                      <li>
+                        <button><i class="fa-solid fa-message"></i> Message</button>
+                      </li>
+                      <li>
+                        <button class="editbtn">
+                          <i class="fa-solid fa-pencil edit"></i> Edit
+                        </button>
+                      </li>
+                      <li>
+                        <button class="removebtn">
+                          <i class="fa-solid fa-trash delete"></i>
+                          Remove
+                        </button>
+                      </li>
+                      <li>
+                        <button class="banbtn">
+                          <i class="fa-solid fa-ban ban"></i>
+                          <span><%- item.isBanned ? 'Unban' : 'Ban' %></span>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              <% } }); %>
+          </table>
       </section>
       <% } else { %>
-      <p class="no-data">No data found!</p>
-      <% } %>
-      <div class="pagination">
-        <ul>
-          <% const number=Math.ceil(usersLength / usersPerPage) || 0 %>
-          <%for(let i=0; i < number; i++) { %>
-          <li><a value="<%=i+1 %>" href="users?p=<%=i %>"> <%=i+1 %> </a></li>
-          <% } %>
-        </ul>
-      </div>
-      <%- include("../chatGPT.ejs") %>
+        <p class="no-data">No data found!</p>
+        <% } %>
+          <div class="pagination">
+            <ul>
+              <% const number=Math.ceil(usersLength / usersPerPage) || 0 %>
+                <%for(let i=0; i < number; i++) { %>
+                  <li><a value="<%=i+1 %>" href="users?p=<%=i %>">
+                      <%=i+1 %>
+                    </a></li>
+                  <% } %>
+            </ul>
+          </div>
+          <%- include("../chatGPT.ejs") %>
     </main>
 
     <!-- add new user button  -->
@@ -203,26 +194,26 @@
       });
     </script>
     <script>
-  const searchInput = document.getElementById('search');
-  const userRows = document.getElementsByClassName('user');
+      const searchInput = document.getElementById('search');
+      const userRows = document.getElementsByClassName('user');
 
-  searchInput.addEventListener('input', function() {
-    const searchQuery = this.value.toLowerCase();
+      searchInput.addEventListener('input', function () {
+        const searchQuery = this.value.toLowerCase();
 
-    for (let i = 0; i < userRows.length; i++) {
-      const firstName = userRows[i].getElementsByTagName('td')[2].textContent.toLowerCase();
+        for (let i = 0; i < userRows.length; i++) {
+          const firstName = userRows[i].getElementsByTagName('td')[2].textContent.toLowerCase();
 
-      if (firstName.includes(searchQuery)) {
-        userRows[i].style.display = '';
-      } else {
-        userRows[i].style.display = 'none';
-     
-      }
-    }
-  });
-</script>
+          if (firstName.includes(searchQuery)) {
+            userRows[i].style.display = '';
+          } else {
+            userRows[i].style.display = 'none';
 
-  
+          }
+        }
+      });
+    </script>
+
+
     <!-- create new user  -->
     <script type="module">
       import { validateForm } from "/js/formValidation.js";
@@ -367,5 +358,6 @@
         });
       });
     </script>
-  </body>
+</body>
+
 </html>
