--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -19,6 +19,9 @@
     <title>Login</title>
   </head>
   <body>
+    <div class="progress" id="PreLoaderBar">
+      <div class="indeterminate"></div>
+    </div>
     <main>
       <div class="container">
         <div class="title">
@@ -28,30 +31,22 @@
           <h1>Welcome back</h1>
           <h2>Log in!</h2>
         </div>
-
         <form id="form">
           <div>
             <label for="username">Username : </label>
             <input type="text" id="username" name="username" />
           </div>
-
           <div class="pass">
             <label for="password">Password : </label>
             <input type="password" id="password" name="Password" />
             <i class="fa-regular fa-eye eye" id="eye"></i>
             <i class="fa-regular fa-eye-slash eye" id="closedEye"></i>
           </div>
-
           <a href="/forgetpassword" class="forgetpassword">Forget Password ?</a>
-
           <p style="color: red" id="error"></p>
-
           <button type="submit" class="btn sign-in">Sign in</button>
-
           <a href="/signup" class="sign-up"> Don't have an account ? Sign up</a>
-
           <p class="or">or</p>
-
           <div class="social">
             <button class="btn google">
               <i class="fab fa-google"></i> Google
@@ -63,7 +58,9 @@
         </form>
       </div>
     </main>
+    <!-- eye  -->
     <script src="js/registration/eye.js"></script>
+    <!-- form validation and sending to backend -->
     <script type="module">
       import { validateForm } from "./js/formValidation.js";
 
@@ -99,6 +96,16 @@
           location.assign("/error");
         }
       });
+    </script>
+
+    <!-- processing bar -->
+    <script>
+      document.onreadystatechange = function () {
+        if (document.readyState === "complete") {
+          console.log(document.readyState);
+          document.getElementById("PreLoaderBar").style.display = "none";
+        }
+      };
     </script>
   </body>
 </html>
