added the forgetpassword page

--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -19,6 +19,9 @@
     <title>forgot password</title>
   </head>
   <body>
+    <div class="progress" id="PreLoaderBar">
+      <div class="indeterminate"></div>
+    </div>
     <main>
       <section class="reset-passsword" id="emailPart">
         <form method="POST" id="form">
@@ -235,6 +238,15 @@
           location.assign("/error");
         }
       });
+    </script>
+    <!-- processing bar -->
+    <script>
+      document.onreadystatechange = function () {
+        if (document.readyState === "complete") {
+          console.log(document.readyState);
+          document.getElementById("PreLoaderBar").style.display = "none";
+        }
+      };
     </script>
   </body>
 </html>
