--- a/views/instructor/viewAll.ejs
+++ b/views/instructor/viewAll.ejs
@@ -34,7 +34,7 @@
       padding: 2em;
       margin: 1em;
       display: flex;
-      flex-flow: row wrap;
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
       align-content: center;
@@ -42,8 +42,9 @@
     }
 
     .profile figure {
-      margin-left: 20%;
+      margin-left: 20px;
     }
+
 
     .profile figure img {
       max-width: 150px;
