--- a/public/css/instructor/home.css
+++ b/public/css/instructor/home.css
@@ -1,43 +1,43 @@
+h1 {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 40px;
+}
 
 .courses-container {
-  overflow-x: scroll;
-  display: flex;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin: 3%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
 }
-.courses-container::-webkit-scrollbar {
-  display: none;
-}
+
 .course-card {
-  margin: 10px;
-  padding-bottom: 10px;
-  margin-left: 0;
-  width: 200px;
-  border: #e7e3e3 1px solid;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-.course-card img {
-  width: 200px;
-  padding: 0.5rem;
-}
-.course-card p {
-  font-size: 14px;
-  margin: 2px;
-}
-.course-card .name {
-  font-weight: 500;
-  font-size: 18px;
-}
-.course-card a {
-  color: black;
-}
-.no-data{
+  background-color: #f8f8f8;
+  border-radius: 6px;
+  padding: 20px;
   text-align: center;
-  margin-top: 100px;
-  user-select: none;
+}
+
+.course-card img {
+  border-radius: 6px;
+}
+
+.course-card .name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.course-card p {
+  margin-top: 5px;
+}
+
+.course-card a {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.course-card a:hover {
+  text-decoration: underline;
 }
