--- a/public/css/instructor/inner-course.css
+++ b/public/css/instructor/inner-course.css
@@ -2,17 +2,25 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
+
 .title input {
   border: none;
   width: 220px;
   outline: none;
   font-size: 35px;
   margin: 10px;
+
   text-transform: capitalize;
 }
-.pencil {
+.fa-pencil {
   cursor: pointer;
+  color: #555;
+}
+
+.fa-pencil:hover {
+  color: #000000;
 }
 .add {
   background-color: rgb(32, 101, 209);
@@ -92,4 +100,102 @@
   border-color: rgb(32, 101, 209);
   color: rgb(0, 43, 112);
   text-decoration: none;
+}
+
+/* Display cards */
+.card {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 300px;
+  margin-top: 5%;
+  margin-left: 5%;
+  display: inline-block;
+}
+
+.my-links,
+.my-files,
+.my-submissions,
+.my-projects {
+  font-family: Arial, sans-serif;
+}
+
+.my-links h2,
+.my-files h2,
+.my-submissions h2,
+.my-projects h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.my-submissions h3,
+.my-projects h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.my-submissions p,
+.my-projects p {
+  font-size: 14px;
+  color: #555555;
+  margin-top: 5px;
+}
+
+.my-links a,
+.my-files a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.my-links a:hover,
+.my-files a:hover {
+  text-decoration: underline;
+}
+
+.my-links .deleteLink,
+.my-files .deleteFile,
+.my-submissions .deleteSubmission,
+.my-projects .deleteProject {
+  background-color: #cc0014;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.my-links .deleteLink:hover,
+.my-files .deleteFile:hover,
+.my-submissions .deleteSubmission:hover,
+.my-projects .deleteProject:hover {
+  background-color: #b80012;
+}
+
+.my-links p,
+.my-files p,
+.my-submissions p,
+.my-projects p {
+  font-size: 16px;
+  color: #888888;
+  margin-top: 10px;
+}
+
+/* View students */
+.view-students a {
+  display: inline-block;
+  background-color: #00458e;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  position: absolute;
+  bottom: 5%;
+  right: 1%;
+}
+
+.view-students a:hover {
+  background-color: #0056b3;
 }
