--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -44,6 +44,16 @@
             <p class="no-data">No Available courses</p>
             <% } %>
       </section>
+      <div class="pagination">
+        <ul>
+          <% const number=Math.ceil(coursesLength / coursesPerPage) || 0 %>
+            <%for(let i=0; i < number; i++) { %>
+              <li><a value="<%=i+1 %>" href="?p=<%=i %>">
+                  <%=i+1 %>
+                </a></li>
+              <% } %>
+        </ul>
+      </div>
     </main>
 </body>
 
