--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -12,8 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
+    />
     <!-- toastify -->
     <link
       rel="stylesheet"
@@ -29,6 +31,9 @@
   </head>
 
   <body>
+    <div class="progress" id="PreLoaderBar">
+      <div class="indeterminate"></div>
+    </div>
     <%- include("./nav.ejs") %>
     <main>
       <header>
@@ -89,81 +94,96 @@
         </section>
       </header>
       <section>
-        <section>
-          <% if (users.length) { %>
-          <table>
-            <tr>
-              <th colspan="6">
-                <div class="search">
-                  <i class="fas fa-search"></i>
-                  <input type="text" id="search" placeholder="Search by first name">
-                </div>
-              </th>
-              <th>
-                <button class="filter">
-                  <i class="fa-solid fa-filter"></i>
-                </button>
-                <div class="filter-options" style="display: none;">
-                  <label><input type="checkbox" value="student">Students</label>
-                  <label><input type="checkbox" value="instructor">Instructors</label>
-                  <label><input type="checkbox" value="teachingAssistant">Teaching Assistants</label>
-                </div>
-              </th>
-            </tr>
-      <% users.forEach(item => {
-        if (item.role !== 'admin') { %>
-      <tr class="user">
-        <td>
-          <input type="checkbox" class="checkbox" />
-          <div class="right-and-wrong" style="display: none">
-            <i class="fa-solid fa-check" style="color: green; cursor: pointer"></i>
-            <i class="fa-solid fa-xmark" style="color: red; cursor: pointer"></i>
-          </div>
-        </td>
-        <td>
-          <div class="container">
-            <img src="<%= item.profilePic %>" alt="profile picture" />
-          </div>
-        </td>
-        <td><%= item.firstName %> <%= item.lastName %></td>
-        <td><%= item.role %></td>
-        <td><%= item.email %></td>
-        <td class="<%= item.isBanned ? 'banned' : 'active' %>">
-          <span><%- item.isBanned ? 'Banned' : 'Active' %></span>
-        </td>
-        <td style="position: relative">
-          <button class="dots btn">
-            <i class="fa-solid fa-ellipsis-vertical"></i>
-          </button>
-          <div class="options">
-            <ul data-userid="<%= item._id %>">
-              <li>
-                <button><i class="fa-solid fa-message"></i> Message</button>
-              </li>
-              <li>
-                <button class="editbtn">
-                  <i class="fa-solid fa-pencil edit"></i> Edit
-                </button>
-              </li>
-              <li>
-                <button class="removebtn">
-                  <i class="fa-solid fa-trash delete"></i>
-                  Remove
-                </button>
-              </li>
-              <li>
-                <button class="banbtn">
-                  <i class="fa-solid fa-ban ban"></i>
-                  <span><%- item.isBanned ? 'Unban' : 'Ban' %></span>
-                </button>
-              </li>
-            </ul>
-          </div>
-        </td>
-      </tr>
-      <% }
-      }); %>
-    </table>        
+        <% if (users.length) { %>
+        <table>
+          <tr>
+            <th colspan="6">
+              <div class="search">
+                <i class="fas fa-search"></i>
+                <input
+                  type="text"
+                  id="search"
+                  placeholder="Search by first name"
+                />
+              </div>
+            </th>
+            <th>
+              <button class="filter">
+                <i class="fa-solid fa-filter"></i>
+              </button>
+              <div class="filter-options" style="display: none">
+                <label><input type="checkbox" value="student" />Students</label>
+                <label
+                  ><input
+                    type="checkbox"
+                    value="instructor"
+                  />Instructors</label
+                >
+                <label
+                  ><input type="checkbox" value="teachingAssistant" />Teaching
+                  Assistants</label
+                >
+              </div>
+            </th>
+          </tr>
+          <% users.forEach(item => { if (item.role !== 'admin') { %>
+          <tr class="user">
+            <td>
+              <input type="checkbox" class="checkbox" />
+              <div class="right-and-wrong" style="display: none">
+                <i
+                  class="fa-solid fa-check"
+                  style="color: green; cursor: pointer"
+                ></i>
+                <i
+                  class="fa-solid fa-xmark"
+                  style="color: red; cursor: pointer"
+                ></i>
+              </div>
+            </td>
+            <td>
+              <div class="container">
+                <img src="<%= item.profilePic %>" alt="profile picture" />
+              </div>
+            </td>
+            <td><%= item.firstName %> <%= item.lastName %></td>
+            <td><%= item.role %></td>
+            <td><%= item.email %></td>
+            <td class="<%= item.isBanned ? 'banned' : 'active' %>">
+              <span><%- item.isBanned ? 'Banned' : 'Active' %></span>
+            </td>
+            <td style="position: relative">
+              <button class="dots btn">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </button>
+              <div class="options">
+                <ul data-userid="<%= item._id %>">
+                  <li>
+                    <button><i class="fa-solid fa-message"></i> Message</button>
+                  </li>
+                  <li>
+                    <button class="editbtn">
+                      <i class="fa-solid fa-pencil edit"></i> Edit
+                    </button>
+                  </li>
+                  <li>
+                    <button class="removebtn">
+                      <i class="fa-solid fa-trash delete"></i>
+                      Remove
+                    </button>
+                  </li>
+                  <li>
+                    <button class="banbtn">
+                      <i class="fa-solid fa-ban ban"></i>
+                      <span><%- item.isBanned ? 'Unban' : 'Ban' %></span>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+          <% } }); %>
+        </table>
       </section>
       <% } else { %>
       <p class="no-data">No data found!</p>
@@ -200,53 +220,55 @@
       });
     </script>
 
+    <script>
+      const searchInput = document.getElementById("search");
+      const userRows = document.getElementsByClassName("user");
+      const filterButton = document.querySelector(".filter");
+      const filterOptions = document.querySelector(".filter-options");
 
-      <script>
-  const searchInput = document.getElementById('search');
-  const userRows = document.getElementsByClassName('user');
-  const filterButton = document.querySelector('.filter');
-  const filterOptions = document.querySelector('.filter-options');
+      // Event listener for search input
+      searchInput.addEventListener("input", function () {
+        const searchQuery = this.value.toLowerCase();
 
-  // Event listener for search input
-  searchInput.addEventListener('input', function() {
-    const searchQuery = this.value.toLowerCase();
+        for (let i = 0; i < userRows.length; i++) {
+          const firstName = userRows[i]
+            .getElementsByTagName("td")[2]
+            .textContent.toLowerCase();
 
-    for (let i = 0; i < userRows.length; i++) {
-      const firstName = userRows[i].getElementsByTagName('td')[2].textContent.toLowerCase();
+          if (firstName.includes(searchQuery)) {
+            userRows[i].style.display = "";
+          } else {
+            userRows[i].style.display = "none";
+          }
+        }
+      });
 
-      if (firstName.includes(searchQuery)) {
-        userRows[i].style.display = '';
-      } else {
-        userRows[i].style.display = 'none';
-      }
-    }
-  });
+      // Event listener for filter button
+      filterButton.addEventListener("click", function () {
+        filterOptions.style.display =
+          filterOptions.style.display === "block" ? "none" : "block";
+      });
 
-  // Event listener for filter button
-  filterButton.addEventListener('click', function() {
-    filterOptions.style.display = filterOptions.style.display === 'block' ? 'none' : 'block';
-  });
+      // Event listener for filter options
+      filterOptions.addEventListener("change", function () {
+        const selectedRoles = Array.from(
+          this.querySelectorAll('input[type="checkbox"]:checked')
+        ).map((checkbox) => checkbox.value);
 
-  // Event listener for filter options
-  filterOptions.addEventListener('change', function() {
-    const selectedRoles = Array.from(this.querySelectorAll('input[type="checkbox"]:checked'))
-      .map(checkbox => checkbox.value);
+        for (let i = 0; i < userRows.length; i++) {
+          const role = userRows[i]
+            .getElementsByTagName("td")[3]
+            .textContent.toLowerCase();
 
-    for (let i = 0; i < userRows.length; i++) {
-      const role = userRows[i].getElementsByTagName('td')[3].textContent.toLowerCase();
+          if (selectedRoles.length === 0 || selectedRoles.includes(role)) {
+            userRows[i].style.display = "";
+          } else {
+            userRows[i].style.display = "none";
+          }
+        }
+      });
+    </script>
 
-      if (selectedRoles.length === 0 || selectedRoles.includes(role)) {
-        userRows[i].style.display = '';
-      } else {
-        userRows[i].style.display = 'none';
-      }
-    }
-  });
-
-</script>
-
-
-  
     <!-- create new user  -->
     <script type="module">
       import { validateForm } from "/js/formValidation.js";
@@ -282,9 +304,10 @@
             error.style.color = "green";
             error.innerHTML = "Added";
             location.reload();
-          }
+          } else location.assign("/error");
         } catch (err) {
           console.log(err);
+          location.assign("/error");
         }
       });
     </script>
@@ -321,8 +344,10 @@
             });
             const data = await res.json();
             if (data.msg) location.reload();
+            else location.assign("/error");
           } catch (err) {
             console.log(err);
+            location.assign("/error");
           }
         });
       });
@@ -348,9 +373,10 @@
                 backgroundColor: "red",
               }).showToast();
               location.reload();
-            }
+            } else location.assign("/error");
           } catch (err) {
             console.log(err);
+            location.assign("/error");
           }
         });
       });
@@ -390,6 +416,15 @@
           });
         });
       });
+    </script>
+    <!-- processing bar -->
+    <script>
+      document.onreadystatechange = function () {
+        if (document.readyState === "complete") {
+          console.log(document.readyState);
+          document.getElementById("PreLoaderBar").style.display = "none";
+        }
+      };
     </script>
   </body>
 </html>
