Pagination for view all students (needs fixing)

--- a/public/css/instructor/inner-course.css
+++ b/public/css/instructor/inner-course.css
@@ -110,7 +110,7 @@
   padding: 20px;
   width: 300px;
   margin-top: 5%;
-  margin-left: 5%;
+  /* margin-left: 5%; */
   display: inline-block;
 }
 
