--- a/public/css/general.css
+++ b/public/css/general.css
@@ -25,3 +25,31 @@ body::-webkit-scrollbar {
 .btn:hover {
   filter: brightness(0.7);
 }
+/* Pagination */
+.pagination {
+  width: 90%;
+  position: fixed;
+  bottom: 3%;
+}
+.pagination ul {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  list-style: none;
+}
+.pagination ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  width: 30px;
+  height: 30px;
+  padding: 7px 7px;
+  text-decoration: none;
+  background-color: #eee;
+  color: black;
+  border-radius: 50%;
+}
+.pagination ul li a:hover {
+  background-color: #e2e2e2;
+}
